--- a/sesion2-dom/reto1/index.html
+++ b/sesion2-dom/reto1/index.html
@@ -1,14 +1,43 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Calculadora</title>
-  </head>
-  <body>
-    <h1>Calculadora Básica</h1>
+<html lang="es">
 
-    <script src="./index.js"></script>
-  </body>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <link rel="stylesheet" href="styles.css">
+  <title>Calculadora</title>
+</head>
+
+<body>
+
+  <section id="container">
+    <section id="calculadora">
+      <header class="top">
+        <div id="result" class="input-valor"></div>
+      </header>
+      <ul class="key">
+        <li id="seven">7</li>
+        <li id="eight">8</li>
+        <li id="nine">9</li>
+        <li id="division" class="operador">/</li>
+        <li id="four">4</li>
+        <li id="five">5</li>
+        <li id="six">6</li>
+        <li id="multiplication" class="operador">*</li>
+        <li id="one">1</li>
+        <li id="two">2</li>
+        <li id="three">3</li>
+        <li id="subtraction" class="operador">-</li>
+        <li id="zero">0</li>
+        <li id="reset">c</li>
+        <li id="equal" class="">=</li>
+        <li id="addition" class="operador">+</li>
+      </ul>
+    </section>
+  </section>
+
+  <script src="./main.js"></script>
+</body>
+
 </html>
