--- a/sesion4-programacion-funcional/index.html
+++ b/sesion4-programacion-funcional/index.html
@@ -18,6 +18,6 @@
 
   <!-- Cambia el .js para visualizar lo aprendido -->
 
-  <script src="app.js"></script>
+  <script src="reto.js"></script>
 </body>
 </html>
